@@ -24,6 +24,7 @@ class IResponse(Interface):
     creator = Attribute("Id of user making this change.")
     date = Attribute("Date (plus time) this response was made.")
     type = Attribute("Type of response (additional/clarification/reply).")
+    mime_type = Attribute("Mime type of the response.")
 
     def add_change(id, name, before, after):
         """Add change to the list of changes.
@@ -124,6 +125,7 @@ class Response(Persistent):
         self.creator = user.getId() or '(anonymous)'
         self.date = DateTime()
         self.type = 'additional'
+        self.mime_type = ''
 
     def add_change(self, id, name, before, after):
         """Add a new issue change.
